gitops-repo/apps/shopflow/notifications.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications-service
  template:
    metadata:
      labels:
        app: notifications-service
    spec:
      containers:
        - name: notifications-service
          # EDIT: your ECR registry.
          image: 922685583704.dkr.ecr.us-east-1.amazonaws.com/shopflow-notifications:1.0
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet: { path: /actuator/health/readiness, port: 8080 }
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health/liveness, port: 8080 }
            initialDelaySeconds: 30
            periodSeconds: 15
